# Practica_pi

./: CMakeLists.txt  CMakeLists_2222.txt  probando123
ClasesTeoricas/: clase02_09.c  claseTeo.c  claseTeo2.c  claseTeo21_10.c  claseTeo24_09.c  claseTeo30_09.c
ClasesTeoricas/ClaseTeo04_11/dictADT/: dictADT.c  dictADT.h  dictADTTester.c
ClasesTeoricas/ClaseTeo05_11/: boolMatADT.c  boolMatADT.h  boolMatADTTester.c
ClasesTeoricas/ClaseTeo08_10/: ej1.c  ej5.c  ej8.c
ClasesTeoricas/ClaseTeo22_10/dateADT/: dateADT.c  dateADT.h
ClasesTeoricas/ClaseTeo22_10/stackADT/: stackADT.c  stackADT.h  stackADTList.c  (+1 more)
Lib/: getnum.c  getnum.h  getnum2.c  list.c  list.h  main.c  random.c  random.h  utillist.c  utillist.h
Lib/listADT/: listADT.c  listADT.h  listADTTester.c
Lib/vecADT/: vecADT.c  vecADT.h  vecADTTester.c
Parcial 2/: 1.c  2.c  3.c
Parciales_Viejos/Primeros_Parciales/: a.out  parcial1.c  parcial2.c  parcial2022_1C_EJ1.c  parcial2022_1C_EJ3.c  parcial2022_REC_1C_EJ2.c  parcial2022_REC_1C_EJ3.c  parcial2023_1C_EJ1.c  parcial2023_1C_EJ2.c  parcial2023_1C_EJ3.c  parcial2023_2C_EJ1.c  parcial2023_2C_EJ2.c  parcial2023_2C_EJ3.c  parcial2023_REC_1C_EJ1.c  parcial2023_REC_1C_EJ2.c  parcial2023_REC_1C_EJ3.c  parcial2024_1C_EJ1.c  parcial2024_1C_EJ2.c  parcial2024_1C_EJ2_2.c  parcial2024_1C_EJ3.c
Practica1/: ej1.c  ej10.c  ej11.c  ej12.c  ej13  ej13.c  ej13_2  ej13_2.c  ej14  ej14.c  ej14_2.c  ej15.c  ej16.c  ej2.c  ej3.c  ej4.c  ej5.c  ej6.c  ej7.c  ej8.c  ej9_2.c  out.txt  tp1_10  tp1_12.h
Practica10/ej1/: ej1.c
Practica10/ej2/: ej2.c
Practica10/ej3/: ej3.c
Practica10/ej4/: ej4.c
Practica10/ej5/: ej5.c
Practica10/ej6/: ej6.c
Practica10/ej7/: ej7.c
Practica10/ej8/: ej8.c
Practica10/ej9/: ej9.c
Practica11/ej1/: ej1.c
Practica11/ej10/: bagADT.c  bagADT.h  bagADTTester.c
Practica11/ej11/: vectorADT.c  vectorADT.h  vectorADTTester.c
Practica11/ej12/: socialADT.c  socialADT.h  socialADTTester.c
Practica11/ej13/: rankingADT.c  rankingADT.h  rankingADTTester.c
Practica11/ej14/: listADT.c  listADT.h  listADTTester.c
Practica11/ej15/: moveToFrontADT.c  moveToFrontADT.h  moveToFrontADTTester.c
Practica11/ej16/: ej16.c
Practica11/ej17/: phrasesADT.c  phrasesADT.h  phrasesADTTester.c
Practica11/ej17bis/: squirrelCensusADT.c  squirrelCensusADT.h  squirrelCensusADTTester.c
Practica11/ej18/: ej18.c
Practica11/ej2/: ej2.c
Practica11/ej3/: ej3.txt
Practica11/ej4/: ej4.c
Practica11/ej5/: complejosADT.c  complejosADT.h  complejosADTTester.c
Practica11/ej6/: ej6.c
Practica11/ej7/: ej7.c
Practica11/ej8/: setADT.c  setADT.h  setADTTester.c
Practica11/ej9/: ej9.txt
Practica2/: a.out  ej1.c  ej10.c  ej11  ej11.c  ej12.c  ej13.c  ej14.c  ej15.c  ej16.c  ej16b  ej17.c  ej18.c  ej19.c  ej2.c  ej20.c  ej21.c  ej22.c  ej3.c  ej4.c  ej5.c  ej6.c  ej7.c  ej8.c  ej9.c  entrada.txt  output.txt  salida16.txt
Practica3/: a.out  asda.txt  ej1.c  ej10.c  ej11.c  ej12.c  ej13.c  ej14.c  ej15.c  ej16.c  ej16b.c  ej17.c  ej18.c  ej19.c  ej2.c  ej20.c  ej21.c  ej22.c  ej24.c  ej25.c  ej26.c  ej3.c  ej4.c  ej5.c  ej6.c  ej7.c  ej8.c  ej9.c  prueba.c
Practica4/: ej1.c  ej10.c  ej11.c  ej12.c  ej13.c  ej16.c  ej17.c  ej3.c  ej4.c  ej5.c  ej6.c  ej7.c  ej8.c  ej9.c  tp4_13a.c  tp4_13b.c  tp4_14a.c  tp4_14b.c  tp4_15a.c  tp4_15a.h  tp4_15b.c  tp4_15b.h  tp4_15main.c
Practica5/: ej2.c  ej4.c  ej6.c  randomTester.c
Practica5/ej1/: ej1.c
Practica5/ej10/: ej10.c
Practica5/ej11/: ej11.c
Practica5/ej12/: ej12.c
Practica5/ej13/: ej13.c  ej13.txt
Practica5/ej14/: ej14.c
Practica5/ej4/: ej4.c
Practica5/ej5/: ej5.c
Practica5/ej6/: ej6.c
Practica5/ej7/: ej7.c  ej7.h  ej7tester.c
Practica5/ej8/: ej8.c  ej8.h  ej8tester.c
Practica5/ej9/: ej9.c
Practica6/ej1/: ej1.c
Practica6/ej10/: ej10.c
Practica6/ej11/: ej11.c
Practica6/ej12/: ej12.c
Practica6/ej13/: ej13.c
Practica6/ej14/: ej14.c
Practica6/ej15/: ej15.c
Practica6/ej16/: ej16.c
Practica6/ej17/: ej17.c
Practica6/ej18/: ej18.c
Practica6/ej19/: ej19.c
Practica6/ej2/: ej2.c
Practica6/ej20/: ej20.c
Practica6/ej21/: ej21.c
Practica6/ej22/: ej22.c
Practica6/ej23/: ej23.c
Practica6/ej24/: ej24.c
Practica6/ej25/: ej25.c
Practica6/ej26/: ej26.c
Practica6/ej27/: ej27.c
Practica6/ej28/: ej28.c
Practica6/ej29/: ej29.c
Practica6/ej3/: ej3  ej3.c
Practica6/ej30/: ej30.c
Practica6/ej31/: ej31.c
Practica6/ej32/: ej32.c
Practica6/ej33/: ej33.c
Practica6/ej34/: ej34.c
Practica6/ej35/: ej35.c
Practica6/ej4/: ej4.c
Practica6/ej5/: ej5.c
Practica6/ej6/: ej6.c
Practica6/ej7/: ej7.c
Practica6/ej8/: ej8.c
Practica6/ej9/: ej9.c
Practica7/ej10/: ej10.c
Practica7/ej11/: ej11.c
Practica7/ej14/: ej14.c
Practica7/ej19/: ej19.c
Practica7/ej2/: ej2.c
Practica7/ej20/: ej20.c
Practica7/ej21/: ej21.c
Practica7/ej4/: ej4.c
Practica7/ej5/: ej5.c
Practica7/ej6/: ej6.c
Practica7/ej7/: ej7.c
Practica7/ej8/: ej8.c
Practica7/ej9/: ej9_a.c  ej9_b.c
Practica8/ej4/: ej4.c  ej4_b.c
Practica8/ej5/: ej5.c
Practica8/ej6/: ej6.c
Practica8/ej7/: ej7.c
Practica8/ej8/: ej8.c
Practica8/ej9/: ej9.c
Practica9/ej0/: ej0.c
Practica9/ej1/: ej1.c
Practica9/ej10/: ej10.c
Practica9/ej11/: ej11.c
Practica9/ej12/: ej12.c
Practica9/ej13/: ej13.c
Practica9/ej14/: ej14.c
Practica9/ej15/: ej15.c
Practica9/ej16/: ej16.c
Practica9/ej17/: ej17.c
Practica9/ej18/: ej18.c
Practica9/ej19/: ej19.c
Practica9/ej2/: ej2.c
Practica9/ej20/: ej20.c
Practica9/ej3/: ej3.c
Practica9/ej4/: ej4.c
Practica9/ej5/: ej5.c
Practica9/ej7/: ej7.c
Practica9/ej8/: ej8.c
Practica9/ej9/: ej9.c
Taller/: Taller  Taller1.c  Taller10.c  Taller3.c  Taller4.c  Taller5.c  Taller6.c  Taller7.c  a.out  claseTeo21_10.c  claseTeo24_09.c
Taller/ClaseTeo08_10/: ej2.c  ej3.c  ej4.c  ej6.c  ej7.c
Taller/T12/: addressBookADT.c  addressBookADT.h  addressBookADTTester.c
Taller/Taller1/: Taller1.c
Taller/Taller10/: Taller10.c
Taller/Taller11/: ej1.c  ej2.c
Taller/Taller2/: Taller2.c
Taller/Taller8/: Taller8.c
Taller/Taller9/: Taller9.c
(+33 files in other folders)
