cmake_minimum_required(VERSION 3.16)
project(Practica_2 C)

set(CMAKE_C_FLAGS "-Wall -pedantic -std=c99 -lm -g -fsanitize=address")


#add_executable(Prac1 Practica1/ej1.c)
#add_executable(Prac1.3 Practica1/ej3.c)
#add_executable(Prac1.4 Practica1/ej4.c)
#add_executable(Prac1.5 Practica1/ej5.c)
#add_executable(Prac1.6 Practica1/ej6.c)
#add_executable(Prac1.7 Practica1/ej7.c)
#add_executable(Prac1.8 Practica1/ej8.c)
#add_executable(Prac1.9 Practica1/ej9.c)
#add_executable(Prac1.9.2 Practica1/ej9.c)
#add_executable(Prac1.10 Practica1/ej10.c)
#add_executable(Prac1.11 Practica1/ej11.c)
#add_executable(Prac1.12 Practica1/ej12.c)
#add_executable(Prac1.13 Practica1/ej13.c)
#add_executable(Prac1.14 Practica1/ej14.c)
#add_executable(Prac1.14.2 Practica1/ej14.c)
#add_executable(Prac1.15 Practica1/ej15.c)
#add_executable(Prac1.16 Practica1/ej16.c)


#add_executable(Prac2 Practica2/ej1.c)
#add_executable(Prac2.2 Practica2/ej2.c)
#add_executable(Prac2.3 Practica2/ej3.c)
#add_executable(Prac2.4 Practica2/ej4.c)
#add_executable(Prac2.5 Practica2/ej5.c)
#add_executable(Prac2.6 Practica2/ej6.c)
#add_executable(Prac2.7 Practica2/ej7.c)
#add_executable(Prac2.8 Practica2/ej8.c Lib/getnum.c)
#add_executable(Prac2.9 Practica2/ej9.c Lib/getnum.c)
#add_executable(Prac2.10 Practica2/ej10.c Lib/getnum.c)
#add_executable(Prac2.11 Practica2/ej11.c)
#add_executable(Prac2.12 Practica2/ej12.c)
#add_executable(Prac2.13 Practica2/ej13.c Lib/getnum.c)
#add_executable(Prac2.14 Practica2/ej14.c Lib/getnum.c)
#add_executable(Prac2.15 Practica2/ej15.c)
#add_executable(Prac2.16 Practica2/ej16.c Lib/getnum.c)
#add_executable(Prac2.17 Practica2/ej17.c)
#add_executable(Prac2.18 Practica2/ej18.c)
#add_executable(Prac2.19 Practica2/ej19.c)
#add_executable(Prac2.20 Practica2/ej20.c)
#add_executable(Prac2.21 Practica2/ej21.c)
#add_executable(Prac2.22 Practica2/ej22.c)



add_executable(Prac3 Practica3/ej1.c)
add_executable(Prac3.2 Practica3/ej2.c)
add_executable(Prac3.3 Practica3/ej3.c Lib/getnum.c)
add_executable(Prac3.4 Practica3/ej4.c)
add_executable(Prac3.5 Practica3/ej5.c)
add_executable(Prac3.6 Practica3/ej6.c)
add_executable(Prac3.7 Practica3/ej7.c)
add_executable(Prac3.8 Practica3/ej8.c Lib/getnum.c)
add_executable(Prac3.9 Practica3/ej9.c)
add_executable(Prac3.10 Practica3/ej10.c)
add_executable(Prac3.11 Practica3/ej11.c)
add_executable(Prac3.12 Practica3/ej12.c)
add_executable(Prac3.13 Practica3/ej13.c Lib/getnum.c)
add_executable(Prac3.14 Practica3/ej14.c)
add_executable(Prac3.15 Practica3/ej15.c Lib/getnum.c)
add_executable(Prac3.16 Practica3/ej16.c)
add_executable(Prac3.17 Practica3/ej17.c)
add_executable(Prac3.18 Practica3/ej18.c Lib/getnum.c)
add_executable(Prac3.19 Practica3/ej19.c)
add_executable(Prac3.20 Practica3/ej20.c)
add_executable(Prac3.21 Practica3/ej21.c Lib/getnum.c)
add_executable(Prac3.22 Practica3/ej22.c)
add_executable(Prac3.23 Practica3/ej23.c)
add_executable(Prac3.24 Practica3/ej24.c)
add_executable(Prac3.25 Practica3/ej25.c Lib/getnum.c)
add_executable(Prac3.26 Practica3/ej26.c)




add_executable(Prac4 Practica4/ej1.c)
add_executable(Prac4.2 Practica4/ej2.c)
add_executable(Prac4.3 Practica4/ej3.c)
add_executable(Prac4.4 Practica4/ej4.c)
add_executable(Prac4.5 Practica4/ej5.c)
add_executable(Prac4.6 Practica4/ej6.c)
add_executable(Prac4.7 Practica4/ej7.c)
add_executable(Prac4.8 Practica4/ej8.c)
add_executable(Prac4.9 Practica4/ej9.c)
add_executable(Prac4.10 Practica4/ej10.c)
add_executable(Prac4.11 Practica4/ej11.c)
add_executable(Prac4.12 Practica4/ej12.c)
add_executable(Prac4.13 Practica4/ej13.c)
add_executable(Prac4.14 Practica4/ej14.c)
add_executable(Prac4.15 Practica4/ej15.c)
add_executable(Prac4.16 Practica4/ej16.c)
add_executable(Prac4.17 Practica4/ej17.c)






add_executable(Taller1 Taller/Taller1.c)
add_executable(Taller2 Taller/Taller2.c Lib/getnum.c)





#for i in {1..17}; do
#touch "ej$i.c"
#done
