cmake_minimum_required(VERSION 3.16)
project(Practica_2 C)

set(CMAKE_C_FLAGS "-Wall -pedantic -std=c99 -lm -g -fsanitize=address")

#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------

#PRACTICA 1

#add_executable(Prac1 Practica1/ej1.c)
#add_executable(Prac1.3 Practica1/ej3.c)
#add_executable(Prac1.4 Practica1/ej4.c)
#add_executable(Prac1.5 Practica1/ej5.c)
#add_executable(Prac1.6 Practica1/ej6.c)
#add_executable(Prac1.7 Practica1/ej7.c)
#add_executable(Prac1.8 Practica1/ej8.c)
#add_executable(Prac1.9 Practica1/ej9.c)
#add_executable(Prac1.9.2 Practica1/ej9.c)
#add_executable(Prac1.10 Practica1/ej10.c)
#add_executable(Prac1.11 Practica1/ej11.c)
#add_executable(Prac1.12 Practica1/ej12.c)
#add_executable(Prac1.13 Practica1/ej13.c)
#add_executable(Prac1.14 Practica1/ej14.c)
#add_executable(Prac1.14.2 Practica1/ej14.c)
#add_executable(Prac1.15 Practica1/ej15.c)
#add_executable(Prac1.16 Practica1/ej16.c)

#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------

#PRACTICA 2


#add_executable(Prac2 Practica2/ej1.c)
#add_executable(Prac2.2 Practica2/ej2.c)
#add_executable(Prac2.3 Practica2/ej3.c)
#add_executable(Prac2.4 Practica2/ej4.c)
#add_executable(Prac2.5 Practica2/ej5.c)
#add_executable(Prac2.6 Practica2/ej6.c)
#add_executable(Prac2.7 Practica2/ej7.c)
#add_executable(Prac2.8 Practica2/ej8.c Lib/getnum.c)
#add_executable(Prac2.9 Practica2/ej9.c Lib/getnum.c)
#add_executable(Prac2.10 Practica2/ej10.c Lib/getnum.c)
#add_executable(Prac2.11 Practica2/ej11.c)
#add_executable(Prac2.12 Practica2/ej12.c)
#add_executable(Prac2.13 Practica2/ej13.c Lib/getnum.c)
#add_executable(Prac2.14 Practica2/ej14.c Lib/getnum.c)
#add_executable(Prac2.15 Practica2/ej15.c)
#add_executable(Prac2.16 Practica2/ej16.c Lib/getnum.c)
#add_executable(Prac2.17 Practica2/ej17.c)
#add_executable(Prac2.18 Practica2/ej18.c)
#add_executable(Prac2.19 Practica2/ej19.c)
#add_executable(Prac2.20 Practica2/ej20.c)
#add_executable(Prac2.21 Practica2/ej21.c)
#add_executable(Prac2.22 Practica2/ej22.c)

#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------

#PRACTICA 3

#add_executable(Prac3 Practica3/ej1.c)
#add_executable(Prac3.2 Practica3/ej2.c)
#add_executable(Prac3.3 Practica3/ej3.c Lib/getnum.c)
#add_executable(Prac3.4 Practica3/ej4.c)
#add_executable(Prac3.5 Practica3/ej5.c)
#add_executable(Prac3.6 Practica3/ej6.c)
#add_executable(Prac3.7 Practica3/ej7.c)
#add_executable(Prac3.8 Practica3/ej8.c Lib/getnum.c)
#add_executable(Prac3.9 Practica3/ej9.c)
#add_executable(Prac3.10 Practica3/ej10.c)
#add_executable(Prac3.11 Practica3/ej11.c)
##add_executable(Prac3.12 Practica3/ej12.c)
##add_executable(Prac3.13 Practica3/ej13.c Lib/getnum.c)
##add_executable(Prac3.14 Practica3/ej14.c)
#add_executable(Prac3.15 Practica3/ej15.c Lib/getnum.c)
#add_executable(Prac3.16 Practica3/ej16b.c Lib/getnum.c)
#add_executable(Prac3.17 Practica3/ej17.c)
#add_executable(Prac3.18 Practica3/ej18.c Lib/getnum.c)
#add_executable(Prac3.19 Practica3/ej19.c)
#add_executable(Prac3.20 Practica3/ej20.c)
#add_executable(Prac3.21 Practica3/ej21.c Lib/getnum.c)
#add_executable(Prac3.22 Practica3/ej22.c)
#add_executable(Prac3.23 Practica3/ej23.c)
#add_executable(Prac3.24 Practica3/ej24.c)
#add_executable(Prac3.25 Practica3/ej25.c Lib/getnum.c)
#add_executable(Prac3.26 Practica3/ej26.c)

#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------

#PRACTICA 4

#add_executable(Prac4 Practica4/ej1.c)
#add_executable(Prac4.2 Practica4/ej2.c)
#add_executable(Prac4.3 Practica4/ej3.c)
#add_executable(Prac4.4 Practica4/ej4.c)
#add_executable(Prac4.5 Practica4/ej5.c)
#add_executable(Prac4.6 Practica4/ej6.c)
#add_executable(Prac4.7 Practica4/ej7.c)
#add_executable(Prac4.8 Practica4/ej8.c)
#add_executable(Prac4.9 Practica4/ej9.c)
#add_executable(Prac4.10 Practica4/ej10.c)
#add_executable(Prac4.11 Practica4/ej11.c)
#add_executable(Prac4.12 Practica4/ej12.c)
#add_executable(Prac4.13 Practica4/ej13.c)
#add_executable(Prac4.13a Practica4/tp4_13a.c)
#add_executable(Prac4.13b Practica4/tp4_13b.c)
#add_executable(Prac4.14 Practica4/ej14.c)
#add_executable(Prac4.14a Practica4/tp4_14a.c)
#add_executable(Prac4.14b Practica4/tp4_14b.c)
#add_executable(Prac4.15 Practica4/tp4_15main.c Practica4/tp4_15b.c Practica4/tp4_15a.c Lib/getnum.c)
#add_executable(Prac4.16 Practica4/ej16.c)
#add_executable(Prac4.17 Practica4/ej17.c)

#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------

#PRACTICA 5

#add_executable(Prac5.1 Practica5/ej1/ej1.c)
#add_executable(Prac5.2 Practica5/ej2/ej2.c)
#add_executable(Pracej3 Practica5/ej3/ej3.c)
#add_executable(Pracej4 Practica5/ej4/ej4.c)
#add_executable(Pracej5 Practica5/ej5/ej5.c)
#add_executable(Prac5.6 Practica5/ej6/ej6.c)
#add_executable(Prac5.7  Practica5/ej7/ej7tester.c Practica5/ej7/ej7.c Lib/getnum.c)
#add_executable(Prac5.8 Practica5/ej8/ej8tester.c Practica5/ej8/ej8.c Lib/getnum.c)
#add_executable(Prac5.9 Practica5/ej9/ej9.c)
#add_executable(Prac5.10 Practica5/ej10/ej10.c Lib/getnum.c)
#add_executable(Prac5.11 Practica5/ej11/ej11.c)
#add_executable(Prac5.12 Practica5/ej12/ej12.c Lib/getnum.c)
#add_executable(Prac5.13 Practica5/ej13/ej13.c)
#add_executable(Prac5.14 Practica5/ej14/ej14.c)
#add_executable(Prac5.15 Practica5/ej15/ej15.c)

#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------
#PRACTICA 6

add_executable(Prac6.1 Practica6/ej1/ej1.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.2 Practica6/ej2/ej2.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.3 Practica6/ej3/ej3.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.4 Practica6/ej4/ej4.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.5 Practica6/ej5/ej5.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.6 Practica6/ej6/ej6.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.7 Practica6/ej7/ej7.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.8 Practica6/ej8/ej8.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.9 Practica6/ej9/ej9.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.10 Practica6/ej10/ej10.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.11 Practica6/ej11/ej11.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.12 Practica6/ej12/ej12.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.13 Practica6/ej13/ej13.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.14 Practica6/ej14/ej14.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.15 Practica6/ej15/ej15.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.16 Practica6/ej16/ej16.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.17 Practica6/ej17/ej17.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.18 Practica6/ej18/ej18.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.19 Practica6/ej19/ej19.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.20 Practica6/ej20/ej20.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.21 Practica6/ej21/ej21.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.22 Practica6/ej22/ej22.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.23 Practica6/ej23/ej23.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.24 Practica6/ej24/ej24.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.25 Practica6/ej25/ej25.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.26 Practica6/ej26/ej26.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.27 Practica6/ej27/ej27.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.28 Practica6/ej28/ej28.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.29 Practica6/ej29/ej29.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.30 Practica6/ej30/ej30.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.31 Practica6/ej31/ej31.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.32 Practica6/ej32/ej32.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.33 Practica6/ej33/ej33.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.34 Practica6/ej34/ej34.c Lib/getnum.c Lib/random.c)
add_executable(Prac6.35 Practica6/ej35/ej35.c Lib/getnum.c Lib/random.c)


#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------
#PARCIALES VIEJOS


#add_executable(Parcial1 Parciales_Viejos/Primeros_Parciales/parcial1.c)
add_executable(Parcial2023 Parciales_Viejos/Primeros_Parciales/parcial2023_2C_EJ2.c)
#add_executable(asdn Parciales_Viejos/Primeros_Parciales/parcialEnunciado_EJ2.c)
add_executable(fmlskdfm Parciales_Viejos/Primeros_Parciales/parcial2023_1C_EJ2.c)
add_executable(sdfli Parciales_Viejos/Primeros_Parciales/parcial2023_REC_1C_EJ1.c)
add_executable(fasdfsdf Parciales_Viejos/Primeros_Parciales/parcial2022_1C_EJ3.c)


#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------
#PRACTICA 7

add_executable(Prac7.1 Practica7/ej1/ej1.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.2 Practica7/ej2/ej2.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.3 Practica7/ej3/ej3.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.4 Practica7/ej4/ej4.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.5 Practica7/ej5/ej5.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.6 Practica7/ej6/ej6.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.7 Practica7/ej7/ej7.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.8 Practica7/ej8/ej8.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.9_a Practica7/ej9/ej9_a.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.9_b Practica7/ej9/ej9_b.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.10 Practica7/ej10/ej10.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.11 Practica7/ej11/ej11.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.12 Practica7/ej12/ej12.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.13 Practica7/ej13/ej13.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.14 Practica7/ej14/ej14.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.15 Practica7/ej15/ej15.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.16 Practica7/ej16/ej16.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.17 Practica7/ej17/ej17.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.18 Practica7/ej18/ej18.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.19 Practica7/ej19/ej19.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.20 Practica7/ej20/ej20.c Lib/getnum.c Lib/random.c)
add_executable(Prac7.21 Practica7/ej21/ej21.c Lib/getnum.c Lib/random.c)



#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------



#TALLER

add_executable(Taller1 Taller/Taller1.c)
add_executable(Taller2 Taller/Taller2.c Lib/getnum.c)
add_executable(Taller3 Taller/Taller3.c Lib/getnum.c)
add_executable(Taller4 Taller/Taller4.c Lib/getnum.c Lib/random.c)
add_executable(Taller5 Taller/Taller5.c Lib/getnum.c Lib/random.c)
add_executable(Taller6 Taller/Taller6.c Lib/getnum.c Lib/random.c)
add_executable(Taller7 Taller/Taller7.c Lib/getnum.c Lib/random.c)
add_executable(Taller8 Taller/Taller8.c Lib/getnum.c Lib/random.c)

add_executable(claseTeorica Taller/clase02_09.c Lib/getnum.c Lib/random.c)
add_executable(claseTeorica2 Taller/claseTeo24_09.c Lib/getnum.c Lib/random.c)
add_executable(claseTeorica3 Taller/claseTeo30_09.c Lib/getnum.c Lib/random.c)

#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------

#LIBRERIA

add_executable(Lib Lib/random.c)
add_executable(testrandom Practica5/randomTester.c Lib/random.c)


#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------

#COMANDO QUE CREA CARPETAS CON ARCHIVOS .c ADENTRO

# for i in {1..21}; do mkdir "ej$i"; touch "ej$i/ej$i.c"; done


#CODIGO PARA ESCIRBIR LOS ADD_EXECUTABLE

#include <stdio.h>
#int main() {
#for(int i = 1; i!=35; i++) {
#printf("add_executable(Prac6.%d Practica6/ej%d/ej%d.c Lib/getnum.c Lib/random.c)\n", i, i, i);
#}
#return 0;
#}


#CODIGO SWAP

#aux = a[i];
#a[i]= a[random];
#a[random] = aux;

#-------------------------------------------------------//////\\\\\\-------------------------------------------------------------------
